[tool.poetry]
name = "apimaps"
version = "2.0.0"
description = "API Maps of Space (massive refactor version)"
authors = ["Ralph Schmieder <ralph.schmieder@gmail.com>"]
packages = [{ include = "apimaps", from = "src"}]
readme = "README.md"
include = ["src/templates/*.j2"]

[tool.poetry.scripts]
apimaps = "apimaps.cli:run"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
httpx = "^0.23.0"
blessed = "^1.19.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
coverage = "^6.4.4"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
