[tool.poetry]
name = "apimaps"
version = "0.0.0"
description = "API Maps of Space (massive refactor version)"
authors = ["Ralph Schmieder <ralph.schmieder@gmail.com>"]
packages = [{ include = "apimaps", from = "src"}]
readme = "README.md"
include = ["src/templates/*.j2"]

[tool.poetry.scripts]
apimaps = "apimaps.cli:run"

# this requires the dynamic versioning plugin
# https://github.com/mtkennerly/poetry-dynamic-versioning
# poetry self add "poetry-dynamic-versioning[plugin]"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
httpx = "^0.23.3"
blessed = "^1.20.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.971"
pylint = "^2.15.10"

[tool.poetry.group.test.dependencies]
coverage = "^6.5.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.19.0"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
